Fixed background slideshow on mobile

--- a/app/assets/stylesheets/non_signed_in.css.scss
+++ b/app/assets/stylesheets/non_signed_in.css.scss
@@ -30,6 +30,10 @@
   left: 0;
   width: 100%;
   height: 100%;
+
+  @media only screen and (max-device-width: 768px) {
+    width: 1200px;
+  }
 }
 
 .login-now-btn {
